[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "cryptography>=3.4.8",
    "flask>=3.0.0",
    "flask-login>=0.6.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-wtf>=1.1.0",
    "gunicorn>=21.2.0",
    "pymysql>=1.1.0",
    "pywebpush>=1.14.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "werkzeug>=2.3.0",
]
